# ai-news

./: .gitignore  README.md  processed_news.json  pyproject.toml  requirements.txt
.github/workflows/: news_summary.yml
data/aidb/: index.xlsx
data/aidb/pages/: 20210922_49068.txt  20211005_48923.txt  20211012_48905.txt  20211101_49248.txt  20211119_49274.txt  20211208_14093.txt  20211215_49292.txt  20211222_49313.txt  20211229_49348.txt  20220105_49367.txt  20220303_49631.txt  20220915_49768.txt  20220921_49811.txt  20221208_49873.txt  20221209_49908.txt  20221222_50044.txt  20221226_50110.txt  20230113_50310.txt  20230117_50344.txt  20230120_50421.txt  20230124_50535.txt  20230201_50664.txt  20230208_50831.txt  20230216_50980.txt  20230221_51094.txt  20230305_51162.txt  20230308_51234.txt  20230309_51304.txt  20230313_51377.txt  20230324_51456.txt  20230329_51536.txt  20230401_51605.txt  20230404_51676.txt  20230406_51716.txt  20230412_51770.txt  20230414_51810.txt  20230419_51873.txt  20230425_51944.txt  20230428_51996.txt  20230501_52093.txt  (+112 more)
service/: get_news_text.ipynb  news_summary.py  processed_news.json  scrape_news_list.ipynb  try.ipynb
tests/: test_news_summary.py
