[tool.poetry]
name = "ai-news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ai_news"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
jupyter = "^1.0.0"
notebook = "^7.0.6"
numpy = "^1.26.1"
beautifulsoup4 = "^4.12.2"
pandas = "^2.1.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
